# Dinosaur_game

./: .gitignore  CMakeLists.txt  README.md  test.cpp
.ipd/lib/ge211/src/: ge211_base.h
src/: controller.cpp  controller.h  dinogame.cpp  model.cpp  model.h  view.cpp  view.h
